--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,8 +5,14 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
+   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-   <h1>Bienvenido a la API para skazkistudio.com</h1>
+   <div class="container">
+      <h1>Bienvenido a la API para </h1>
+      <h2>
+         <a href="skazkistudio.com">skazkistudio.com</a>
+      </h2>
+   </div>
 </body>
 </html>
